Exc5/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: back-end-api
spec:
  type: NodePort
  selector:
    app: back-end-api
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api
spec:
  type: NodePort
  selector:
    app: admin-back-end-api
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  type: NodePort
  selector:
    app: front-end
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end
spec:
  type: NodePort
  selector:
    app: admin-front-end
  ports:
    - port: 80
      targetPort: 80
